Fixed css issue with bold
Things which were meant to be bold were not showing up any diffrent from
regular text.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,10 @@ body {
     -webkit-text-size-adjust: 100%;
 }
 
+strong {
+  font-weight: bold;
+}
+
 
 
 /**
